# StudentAssociationManagementSystem

./: .gitignore  Association.cpp  Association.h  CMakeLists.txt  FileManager.cpp  FileManager.h  LICENSE  Member.cpp  Member.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
release/: activity_config.json  association_config.json  user_config.json
